--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,14 +1,9 @@
 <%- include('partials/links.ejs') %>
     <div>
-        <input type="text" name="title" value="<%= postTitle %>"><br>
-        <textarea rows="25" cols="70" name="blogArea"><%= postEdit %></textarea>
-        <button type="submit" method="/update" onclick="updateBlog('<%= postId %>')">Make change</button>
+        <form method="post" action="/update/<%= postId %>">
+            <input type="text" name="title" value="<%= postTitle %>"><br>
+            <textarea rows="25" cols="70" name="blogArea"><%= postEdit %></textarea>
+            <button type="submit">Make change</button>
+        </form>
     </div>
-    <script>
-        function updateBlog(blogId){
-            fetch(`/update/${blogId}`,{
-                method: 'PUT'
-            })
-        }
-    </script>
 <%- include('partials/footer.ejs') %>
